--- a/Index.html
+++ b/Index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <link href="style.css" re;="stylesheet" type="text/css"
+    <link href="style.css" rel="stylesheet" type="text/css"
   </head>
   <body>
       <h1>HI THERE!!!</h1>
